# icpc-notebook

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  run_tests.sh
export/: build  build.sh  config.tex  defs.tex  eplain.tex  files  head.tex  headers.tex  notebook.tex  title.tex  to_tex.py
export/chapters/: math.tex
src/: CMakeLists.txt  base.hpp  check.sh  sc.sh  test.hpp
src/data_structures/: fast_line_container_test.cpp
src/fft/: fft  fft.cpp  fft_test.cpp  ntt.cpp  ntt_test.cpp
src/flow/: dinic.cpp  dinic_test.cpp
src/implementation/: set_tricks.cpp  set_tricks_test.cpp
src/import/: README
src/import/bipart/: maxmatch2.cpp
src/import/flow/: minmax.cpp
src/import/geo/: geo.cpp  geo2.cpp  geo3-plochy.cpp  geo4-vzdialenosti.cpp  geo5-kruhy.cpp
src/import/graph/: dfu.cpp  strongcon.cpp
src/import/numth/: composite_comb.cpp  dlog.cpp  gauss.cpp
src/import/stree/: fenwick.cpp  rich.cpp
src/import/text/: aho_corasick.cpp  kmp.cpp  suf1.cpp  suf2.cpp
src/kactl/combinatorial/: RollingBinomial.h  binomial.h  binomialModPrime.h  chapter.tex  derangements.h  intperm.h  multinomial.h
src/kactl/contest/: chapter.tex  template.cpp
src/kactl/data-structures/: FenwickTree.h  FenwickTree2d.h  LazySegmentTree.h  LineContainer.h  Matrix.h  OrderStatisticTree.h  RMQ.h  SegmentTree.h  SubMatrix.h  UnionFind.h  chapter.tex
src/kactl/geometry/: 3dHull.h  Angle.h  CircleIntersection.h  ConvexHull.h  DelaunayTriangulation.h  LineHullIntersection.h  MinimumEnclosingCircle.h  Point.h  Point3D.h  PointInsideHull.h  PolygonArea.h  PolygonCenter.h  PolygonCut.h  PolygonDiameter.h  PolyhedronVolume.h  SegmentDistance.h  SegmentIntersection.h  SegmentIntersectionQ.h  chapter.tex  circleTangents.h  circumcircle.h  closestPair.h  insidePolygon.h  kdTree.h  lineDistance.h  lineIntersection.h  linearTransformation.h  onSegment.h  sideOf.h  sphericalDistance.h
src/kactl/graph/: 2sat.h  BiconnectedComponents.h  CompressTree.h  DFSMatching.h  EdmondsKarp.h  EulerWalk.h  FloydWarshall.h  GeneralMatching.h  GlobalMinCut.h  HLD.h  LCA.h  LinkCutTree.h  MatrixTree.h  MinCostMaxFlow.h  MinCut.h  MinimumVertexCover.h  PushRelabel.h  SCC.h  TopoSort.h  TreePower.h  WeightedMatching.h  bellmanFord.h  chapter.tex  hopcroftKarp.h
src/kactl/number-theory/: MillerRabin.h  ModInverse.h  ModMulLL.h  ModSqrt.cpp  ModSqrt.h  ModSqrt_test.cpp  ModSum.h  ModularArithmetic.h  NTT.h  chapter.tex  chinese.h  eratosthenes.h  euclid.h  factor.h  phiFunction.h
src/kactl/numerical/: BinarySearch.h  Determinant.h  FFT.h  GoldenSectionSearch.h  IntDeterminant.h  IntegrateAdaptive.h  MatrixInverse-mod.h  MatrixInverse.h  PolyInterpolate.h  PolyRoots.h  Polynomial.h  Simplex.h  SolveLinear.h  SolveLinear2.h  SolveLinearBinary.h  Tridiagonal.h  chapter.tex
src/kactl/strings/: AhoCorasick.h  Hashing-codeforces.h  Hashing.h  KMP.h  Manacher.h  MinRotation.h  SuffixArray.h  SuffixTree.h
src/kactl/various/: BumpAllocator.h  ConstantIntervals.h  DivideAndConquerDP.h  IntervalContainer.h  IntervalCover.h  Karatsuba.h  KnuthDP.h  LCS.h  LIS.h  SIMD.h  TernarySearch.h  chapter.tex
src/numth/: misc.cpp  misc.hpp  misc_example.cpp  misc_test.cpp  modeq.cpp  modeq.hpp  modeq_example.cpp  modeq_test.cpp  prime.cpp  prime.hpp  prime_example.cpp  prime_test.cpp
src/segtree/: persistent_segtree  persistent_segtree.cpp  persistent_segtree_test.cpp
src/treap/: treap.cpp  treap_test.cpp
src/tree/: centroid.cpp  centroid_test.cpp  heavylight.cpp  heavylight2.cpp  heavylight2_test.cpp  heavylight_test.cpp  lca.cpp
src/trinerdi/: check.sh  sc.sh  template.cpp  vimrc
src/trinerdi/data-structures/: fast_line_container.cpp  lazy_segtree.cpp  lazy_segtree_test.cpp  persistent_segtree.cpp  treap.cpp  treap_test.cpp
src/trinerdi/graph/: centroid.cpp  centroid_test.cpp  dinic.cpp  dinic_test.cpp  heavylight2.cpp  heavylight2_test.cpp  lca.cpp  lca_test.cpp
src/trinerdi/number-theory/: fastexp.cpp  fastexp_example.cpp  fastexp_test.cpp  misc_test.cpp  modeq_test.cpp  ntt.cpp  prime.cpp  prime_test.cpp  sieve.cpp  sieve_test.cpp
src/trinerdi/numerical/: fft.cpp
src/trinerdi/strings/: aho_corasick.cpp  aho_corasick_test.cpp
(+14 files in other folders)
